--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     }],
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
-        "magento/framework": "103.0.*",
-        "magento/module-catalog": "104.0.*",
-        "magento/module-ui": "101.0.*",
-        "magento/module-catalog-import-export": "101.1.*"
+        "magento/framework": "^103.0",
+        "magento/module-catalog": "^104.0",
+        "magento/module-ui": "^101.0 || ^102.0",
+        "magento/module-catalog-import-export": "^101.1"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "autoload": {
         "files": ["registration.php"],
         "psr-4": {
@@ -28,3 +28,4 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
+
